# MentorAI-ChatBot

./: .gitignore  AUDITORIA.md  mentor_app.py  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
assets/: mic.js  style.css
mentorai/: mentorai.py  state.py
modelos/: traduccion_carreras.json
reflex.lock/: package.json
src/evaluacion/: calibracion.py
src/recomendacion/: motor_recomendacion.py
tests/: test_engine.py  test_utils.py
