[project]
name = "mentorai"
version = "0.1.0"
description = "Orientador vocacional con IA Generativa + ML Clásico"
requires-python = ">=3.12,<3.13"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"legacy/*" = ["ALL"]
"mentorai/mentorai.py" = ["E501"]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
